Update limitations and justification sections in notebook

--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -58,6 +58,7 @@
         "\n",
         "#### Limitations and ethical considerations\n",
         "- Occupational stereotypes embedded in language carry real consequences for gendered representation.\n",
+        "- Inclusive forms like “infirmier.ère” or “enseignant.e” lack standardisation, which can make them difficult for models to learn.\n"
         "- Risk of reinforcing harmful stereotypes if detection systems are misinterpreted as prescriptive rather than diagnostic.\n",
         "- Dataset size is small (2.4k examples), which limits robustness.\n",
         "\n",
@@ -190,7 +191,7 @@
         "#### Why FairTranslate is appropriate\n",
         "- Contains gender-marked occupational terms, which are important to stereotype evaluation in French\n",
         "- Includes three gender variants (male, female, inclusive) enabling counterfactual fairness checks\n",
-        "- Includes ambiguity levels that match HEARTS categorisation (\"ambiguous\", \"unambiguous\", \"long unambiguous\")\n",
+        "- Includes ambiguity levels (\"ambiguous\", \"unambiguous\", \"long unambiguous\")\n",
         "- Provides context-specific occupational stereotype labels based on European workforce statistics\n",
         "\n",
         "#### Data access and ethics\n",
@@ -498,7 +499,7 @@
         "\n",
         "#### Why CamemBERT\n",
         "- CamemBERT is trained on large-scale French data (OSCARS corpus)\n",
-        "- Handles grammatical gender\n",
+        "- Handles grammatical gender and inclusive constructions\n",
         "- French morphology makes gender cues explicit, unlike English, therefore requiring a model trained on French\n",
         "\n",
         "#### Architectural justification\n",
