Fix typo in failure case interpretation

--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -978,7 +978,7 @@
       "source": [
         "#### Failure case interpretation\n",
         "The failure cases show that CamemBERT:\n",
-        "- Overweights morphological gender markers\n",
+        "- Overweighs morphological gender markers\n",
         "- Associates any gendered job title with a stereotype, regardless of dataset label\n",
         "- Underutilises context, particularly in occupations not strongly associated with gender in the real-world statistics used by FairTranslate"
       ]
