--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -75,7 +75,7 @@
         "id": "57bbfa42"
       },
       "source": [
-        "## 0. Environment & pip installs"
+        "## 0. Setup"
       ]
     },
     {
@@ -87,14 +87,12 @@
       },
       "outputs": [],
       "source": [
-        "%%bash\n",
+        "!python -V\n",
         "\n",
-        "python -V\n",
-        "\n",
-        "python -m pip install --upgrade pip --quiet\n",
-        "python -m pip install transformers datasets scikit-learn pandas numpy torch torchvision torchaudio --quiet\n",
-        "python -m pip install accelerate evaluate codecarbon sentencepiece sacremoses --quiet\n",
-        "python -m pip install git+https://github.com/huggingface/transformers --quiet || true"
+        "!python -m pip install --upgrade pip --quiet\n",
+        "!python -m pip install transformers datasets scikit-learn pandas numpy torch torchvision torchaudio --quiet\n",
+        "!python -m pip install accelerate evaluate codecarbon sentencepiece sacremoses --quiet\n",
+        "!python -m pip install git+https://github.com/huggingface/transformers --quiet || true"
       ]
     },
     {
@@ -345,7 +343,7 @@
       "source": [
         "## 4. Train / validation / test split\n",
         "\n",
-        "Use stratified split with 80% train, 10% validation, 10% test (or 80/20 train/test with a validation split from training)."
+        "Stratified split with 80% train, 10% validation, 10% test (or 80/20 train/test with a validation split from training)."
       ]
     },
     {
@@ -357,8 +355,8 @@
       },
       "outputs": [],
       "source": [
+        "# Stratisfied split\n",
         "train_df, test_df = train_test_split(df, test_size=0.2, stratify=df['label'], random_state=SEED)\n",
-        "# optionally split train to train+val\n",
         "train_df, val_df = train_test_split(train_df, test_size=0.125, stratify=train_df['label'], random_state=SEED)  # 0.125 * 0.8 = 0.1\n",
         "\n",
         "print(f\"Train: {len(train_df)}\")\n",
@@ -422,12 +420,7 @@
         "baseline_preds = clf.predict(X_test)\n",
         "print(\"TF-IDF + LR Test classification report:\")\n",
         "print(classification_report(y_test, baseline_preds, digits=4))\n",
-        "print(f\"Macro F1: {f1_score(y_test, baseline_preds, average='macro')}\")\n",
-        "\n",
-        "# Save baseline\n",
-        "import joblib\n",
-        "joblib.dump(vectorizer, os.path.join(OUTPUT_DIR, 'tfidf_vectorizer.joblib'))\n",
-        "joblib.dump(clf, os.path.join(OUTPUT_DIR, 'tfidf_lr.joblib'))"
+        "print(f\"Macro F1: {f1_score(y_test, baseline_preds, average='macro')}\")"
       ]
     },
     {
@@ -503,7 +496,7 @@
         "- French morphology makes gender cues explicit, unlike English, therefore requiring a model trained on French\n",
         "\n",
         "#### Architectural justification\n",
-        "- CamemBERT-base (110M parameters) balances accuracy and sustainability\n",
+        "- CamemBERT-base balances accuracy and sustainability\n",
         "- Reduced epochs limit compute cost and emissions\n",
         "\n",
         "#### Hyperparameter tuning\n",
@@ -635,7 +628,8 @@
         "    )\n",
         "tracker.start()\n",
         "trainer.train()\n",
-        "tracker.stop()\n",
+        "emissions = tracker.stop()\n",
+        "print(f\"\\nEstimated emissions: {emissions:.4f} kg\")\n",
         "\n",
         "# Save model in directory\n",
         "trainer.save_model(os.path.join(OUTPUT_DIR, 'camembert_finetuned'))"
@@ -652,7 +646,9 @@
         "| 2 | 0.560849 | 0.359345 | 0.936548 | 0.821429 | 0.857429 |\n",
         "| 3 | 0.560849 | 0.177445 | 0.988636 | 0.971429 | 0.979547 |\n",
         "| 4 | 0.265455 | 0.119675 | 0.976837 | 0.972757 | 0.974768 |\n",
-        "| 5 | 0.265455 | 0.100910 | 0.994253 | 0.985714 | 0.989863 |"
+        "| 5 | 0.265455 | 0.100910 | 0.994253 | 0.985714 | 0.989863 |\n",
+        "\n",
+        "Estimated emissions: 0.0034 kg"
       ],
       "metadata": {
         "id": "2otZLT2EVUaB"
@@ -981,32 +977,6 @@
         "- Overweighs morphological gender markers\n",
         "- Associates any gendered job title with a stereotype, regardless of dataset label\n",
         "- Underutilises context, particularly in occupations not strongly associated with gender in the real-world statistics used by FairTranslate"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "fb5aa464",
-      "metadata": {
-        "id": "fb5aa464"
-      },
-      "source": [
-        "## 10. Save results"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "2DeQriGuWr44",
-      "metadata": {
-        "id": "2DeQriGuWr44"
-      },
-      "outputs": [],
-      "source": [
-        "# Access Google Drive to save output folder\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive', force_remount=True)\n",
-        "\n",
-        "!cp -r outputs_camembert_fairtranslate/ drive/MyDrive/"
       ]
     },
     {
