Rename sections in notebook from 'Installments' to 'Setup'

--- a/HEARTS_EMGSD_ALBERT.ipynb
+++ b/HEARTS_EMGSD_ALBERT.ipynb
@@ -25,7 +25,7 @@
         "id": "oFDKQUWfhfT1"
       },
       "source": [
-        "## 0. Installments"
+        "## 0. Setup"
       ]
     },
     {
@@ -47,7 +47,7 @@
         "id": "0OHXOqNn2ngT"
       },
       "source": [
-        "## 1. Setup and imports"
+        "## 1. Imports"
       ]
     },
     {
