--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -807,7 +807,7 @@
         "\n",
         "[1] Morrison, M. (2022) \"Mcnemar's test\", in *The SAGE encyclopedia of research design*. 2 ed., Vol. 4, pp. 887-888.\n",
         "\n",
-        "[2] Perktold, J. (2024) \"statsmodels/statsmodels: Release 0.14.2\", *Zenodo*."
+        "[2] Perktold, J. (2024) \"statsmodels/statsmodels: Release 0.14.2\", in *Zenodo*."
       ]
     },
     {
