--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -680,14 +680,17 @@
       "outputs": [],
       "source": [
         "# Evaluate with trainer\n",
-        "try:\n",
-        "    camembert_logits = trainer.predict(test_tok).predictions\n",
-        "    camembert_preds = np.argmax(camembert_logits, axis=-1)\n",
-        "    print(\"CamemBERT Test classification report:\")\n",
-        "    print(classification_report(y_test, camembert_preds, digits=4))\n",
-        "    print(f\"Macro F1: {f1_score(y_test, camembert_preds, average='macro')}\")\n",
-        "except Exception as e:\n",
-        "    print(f\"No trained model available in this session. Error: {e}\")"
+        "camembert_logits = trainer.predict(test_tok).predictions\n",
+        "camembert_preds = np.argmax(camembert_logits, axis=-1)\n",
+        "\n",
+        "# Classification report\n",
+        "report = classification_report(y_test, camembert_preds, digits=4, output_dict=True)\n",
+        "report_df = pd.DataFrame(report).transpose()\n",
+        "report_df.to_csv(os.path.join(OUTPUT_DIR, 'classification_report.csv'))\n",
+        "\n",
+        "print(\"CamemBERT Test classification report:\")\n",
+        "print(report)\n",
+        "print(f\"Macro F1: {f1_score(y_test, camembert_preds, average='macro')}\")"
       ]
     },
     {
