Updated using Colab

--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -689,7 +689,7 @@
         "report_df.to_csv(os.path.join(OUTPUT_DIR, 'classification_report.csv'))\n",
         "\n",
         "print(\"CamemBERT Test classification report:\")\n",
-        "print(report)\n",
+        "display(report_df)\n",
         "print(f\"Macro F1: {f1_score(y_test, camembert_preds, average='macro')}\")"
       ]
     },
@@ -697,6 +697,16 @@
       "cell_type": "markdown",
       "source": [
         "#### Results\n",
+        "\n",
+        "CamemBERT Test Classification Report:\n",
+        "\n",
+        "|index|precision|recall|f1-score|support|\n",
+        "|---|---|---|---|---|\n",
+        "|0|1\\.0|0\\.9645|0\\.9819|141\\.0|\n",
+        "|1|0\\.9856|1\\.0|0\\.9928|343\\.0|\n",
+        "|accuracy|0\\.9897|0\\.9897|0\\.9897|0\\.9897|\n",
+        "|macro avg|0\\.9928|0\\.9823|0\\.9874|484\\.0|\n",
+        "|weighted avg|0\\.9898|0\\.9897|0\\.9896|484\\.0|\n",
         "\n",
         "**Macro F1**: 0.9873567842346413"
       ],
