--- a/HEARTS_FairTranslate_CamemBERT.ipynb
+++ b/HEARTS_FairTranslate_CamemBERT.ipynb
@@ -491,7 +491,7 @@
         "In the French context, this must be adapted for several linguistic reasons:\n",
         "\n",
         "#### Why CamemBERT\n",
-        "- CamemBERT is trained on large-scale French data (OSCARS corpus)\n",
+        "- CamemBERT is trained on large-scale French data (OSCAR corpus)\n",
         "- Handles grammatical gender and inclusive constructions\n",
         "- French morphology makes gender cues explicit, unlike English, therefore requiring a model trained on French\n",
         "\n",
